# Fete-des-gourmets

./: .env
fete_des_gourmets/: .gitignore  Cargo.toml  Dioxus.toml  diesel.toml  gourmets.db
fete_des_gourmets/diagram/: er_diagram.planuml  use_case.plantuml
fete_des_gourmets/src/: lib.rs  main.rs
fete_des_gourmets/src/domain/: mod.rs
fete_des_gourmets/src/infrastructure/: mod.rs
fete_des_gourmets/src/infrastructure/sqlite/: schema.rs
fete_des_gourmets/src/infrastructure/sqlite/migrations/2025-03-28-215240_create_user/: down.sql  up.sql
